--- a/tags.html
+++ b/tags.html
@@ -20,36 +20,11 @@
   </header>
   <div id="content-wrapper">
     <div class="inner clearfix">
-      <section id="main-content">
-<article>
-	<h3>
-            [<a href="/category/pelican.html" class="category">pelican</a>]
-        <a href="/pelican-meta-data.html">Pelican(二) —— 文件元数据</a>
-    </h3>
-    <hr />
-	<h6>
-    <span>2016-05-03 20:51</span> <span><a href="/tag/pelican.html" class="tag">pelican</a><a href="/tag/blog.html" class="tag">blog</a><a href="/tag/restructuredtext.html" class="tag">reStructuredText</a></span></h6>
-    <hr />
-	<p class="first last">元数据就是除了文章内容以外，对文章属性进行额外描述的数据，
-一般主要用于管理</p>
-
-		<p class="continue"><a href="/pelican-meta-data.html">阅读全文 &raquo;</a></p>
-</article>
-<article>
-	<h3>
-            [<a href="/category/pelican.html" class="category">pelican</a>]
-        <a href="/pelican-basic.html">Pelican(一) —— 基本理解</a>
-    </h3>
-    <hr />
-	<h6>
-    <span>2016-05-03 19:38</span> <span><a href="/tag/pelican.html" class="tag">pelican</a><a href="/tag/blog.html" class="tag">blog</a></span></h6>
-    <hr />
-	<p class="first last">介绍Pelican的用途(说明)，目录结构和逻辑结构。</p>
-
-		<p class="continue"><a href="/pelican-basic.html">阅读全文 &raquo;</a></p>
-</article>
-
-
+      <section id="main-content">	<ul>
+		<li><a href="/tag/blog.html">blog</a></li>
+		<li><a href="/tag/pelican.html">pelican</a></li>
+		<li><a href="/tag/restructuredtext.html">reStructuredText</a></li>
+	</ul>
 </section>
       <aside id="sidebar">
         <div class="pannel">
