--- a/pelican-basic.html
+++ b/pelican-basic.html
@@ -22,26 +22,24 @@
     <div class="inner clearfix">
       <section id="main-content"><article>
 	<h1>Pelican(一) —— 基本理解</h1>
-	<hr/>
-	<h6>
-		<span>
-			<a href="/author/inpool.html">Inpool</a>
-		</span>
-		<span>
-			2016-05-03 19:38
-		</span>
-			<span>
-				分类：<a href="/category/pelican.html">pelican</a>
-			</span>
-	</h6>
+	<div class="article_info">
 		<h6>
-			<span>标签：
-
-					<a href="/tag/pelican.html" class="tag">pelican</a>
-					<a href="/tag/blog.html" class="tag">blog</a>
+			<span>
+				<a href="/author/inpool.html">Inpool</a>
 			</span>
+			<span>
+				2016-05-03 19:38
+			</span>
+				<span>
+					分类：<a href="/category/pelican.html">pelican</a>
+				</span>
 		</h6>
-	<hr/>
+			<h6>
+				<span>标签：						<a href="/tag/pelican.html" class="tag">pelican</a>
+						<a href="/tag/blog.html" class="tag">blog</a>
+</span>
+			</h6>
+	</div>
 	<div class="section" id="id1">
 <h2>Pelican有什么用</h2>
 <p>Pelican是使用python语言开发的一个静态博客生成工具。默认支持reStructureText和HTML，也可以轻松支持Markdown。</p>
@@ -137,21 +135,23 @@ drwxr-xr-x 1 inpool 197121    0 五月  3 15:11 output/
 文章的标识的时间，自动编排出来。</p>
 </div>
 
-	<h6>
-		<span>
-			<a href="/author/inpool.html">Inpool</a>
-		</span>
-		<span>
-			2016-05-03 19:38
-		</span>
-		<span>
-				<a href="/tag/pelican.html" class="tag">pelican</a>
-				<a href="/tag/blog.html" class="tag">blog</a>
-		</span>
-		<span>
-				分类：<a href="/category/pelican.html">pelican</a>
-		</span>
-	</h6>
+	<div class="article_info">
+		<h6>
+			<span>
+				<a href="/author/inpool.html">Inpool</a>
+			</span>
+			<span>
+				2016-05-03 19:38
+			</span>
+			<span>
+					<a href="/tag/pelican.html" class="tag">pelican</a>
+					<a href="/tag/blog.html" class="tag">blog</a>
+			</span>
+			<span>
+					分类：<a href="/category/pelican.html">pelican</a>
+			</span>
+		</h6>
+	</div>
 </article>
 </section>
       <aside id="sidebar">
