--- a/pelican-meta-data.html
+++ b/pelican-meta-data.html
@@ -22,27 +22,25 @@
     <div class="inner clearfix">
       <section id="main-content"><article>
 	<h1>Pelican(二) —— 文件元数据</h1>
-	<hr/>
-	<h6>
-		<span>
-			<a href="/author/inpool.html">Inpool</a>
-		</span>
-		<span>
-			2016-05-03 20:51
-		</span>
-			<span>
-				分类：<a href="/category/pelican.html">pelican</a>
-			</span>
-	</h6>
+	<div class="article_info">
 		<h6>
-			<span>标签：
-
-					<a href="/tag/pelican.html" class="tag">pelican</a>
-					<a href="/tag/blog.html" class="tag">blog</a>
-					<a href="/tag/restructuredtext.html" class="tag">reStructuredText</a>
+			<span>
+				<a href="/author/inpool.html">Inpool</a>
 			</span>
+			<span>
+				2016-05-03 20:51
+			</span>
+				<span>
+					分类：<a href="/category/pelican.html">pelican</a>
+				</span>
 		</h6>
-	<hr/>
+			<h6>
+				<span>标签：						<a href="/tag/pelican.html" class="tag">pelican</a>
+						<a href="/tag/blog.html" class="tag">blog</a>
+						<a href="/tag/restructuredtext.html" class="tag">reStructuredText</a>
+</span>
+			</h6>
+	</div>
 	<div class="section" id="id1">
 <h2>基础</h2>
 <p>元数据是除了文章内容以外，对文章属性进行额外描述的数据，一般情况下，Pelican支持以下元数据：</p>
@@ -141,22 +139,24 @@
 <p>采用这种方式时， <tt class="docutils literal">FILENAME_METADATA</tt> 的设置方法为正则表达式，需要一定的学习。</p>
 </div>
 
-	<h6>
-		<span>
-			<a href="/author/inpool.html">Inpool</a>
-		</span>
-		<span>
-			2016-05-03 20:51
-		</span>
-		<span>
-				<a href="/tag/pelican.html" class="tag">pelican</a>
-				<a href="/tag/blog.html" class="tag">blog</a>
-				<a href="/tag/restructuredtext.html" class="tag">reStructuredText</a>
-		</span>
-		<span>
-				分类：<a href="/category/pelican.html">pelican</a>
-		</span>
-	</h6>
+	<div class="article_info">
+		<h6>
+			<span>
+				<a href="/author/inpool.html">Inpool</a>
+			</span>
+			<span>
+				2016-05-03 20:51
+			</span>
+			<span>
+					<a href="/tag/pelican.html" class="tag">pelican</a>
+					<a href="/tag/blog.html" class="tag">blog</a>
+					<a href="/tag/restructuredtext.html" class="tag">reStructuredText</a>
+			</span>
+			<span>
+					分类：<a href="/category/pelican.html">pelican</a>
+			</span>
+		</h6>
+	</div>
 </article>
 </section>
       <aside id="sidebar">
