--- a/pelican-basic.html
+++ b/pelican-basic.html
@@ -61,8 +61,8 @@ drwxr-xr-x 1 inpool 197121    0 五月  3 15:11 output/
 <p>各项的含义如下：</p>
 <table border="1" class="docutils">
 <colgroup>
-<col width="32%" />
-<col width="68%" />
+<col width="22%" />
+<col width="78%" />
 </colgroup>
 <thead valign="bottom">
 <tr><th class="head">文件/目录</th>
@@ -80,10 +80,10 @@ drwxr-xr-x 1 inpool 197121    0 五月  3 15:11 output/
 <td>用于存放pelican命令生成的目标文件</td>
 </tr>
 <tr><td>pelicanconf.py</td>
-<td>pelican命令的配置文件</td>
+<td>pelican命令的默认配置文件</td>
 </tr>
 <tr><td>publishconf.py</td>
-<td>从文件名看 <em>应该</em> 是用于发布的配置文件</td>
+<td>作用同pelicanconf.py，用于生成发布用博客的配置文件，需要手动指定</td>
 </tr>
 </tbody>
 </table>
@@ -158,8 +158,8 @@ drwxr-xr-x 1 inpool 197121    0 五月  3 15:11 output/
         <div class="pannel">
           <h6>关于我</h6>
           <ul class="side-nav">
-            <li><a href="#" target="_blank">Another social link</a></li>
             <li><a href="http://weibo.com/inpool" target="_blank">微博</a></li>
+            <li><a href="mailto:%69%6e%70%6f%6f%6c%40%31%32%36%2e%63%6f%6d" target="_blank">电子邮件</a></li>
           </ul>
         </div>
         <div class="pannel">
