--- a/tags.html
+++ b/tags.html
@@ -22,16 +22,16 @@
     <div class="inner clearfix">
       <section id="main-content">	<ul>
 		<li><a href="/tag/blog.html">blog</a></li>
-		<li><a href="/tag/pelican.html">pelican</a></li>
 		<li><a href="/tag/restructuredtext.html">reStructuredText</a></li>
+		<li><a href="/tag/pelican.html">pelican</a></li>
 	</ul>
 </section>
       <aside id="sidebar">
         <div class="pannel">
           <h6>关于我</h6>
           <ul class="side-nav">
-            <li><a href="#" target="_blank">Another social link</a></li>
             <li><a href="http://weibo.com/inpool" target="_blank">微博</a></li>
+            <li><a href="mailto:%69%6e%70%6f%6f%6c%40%31%32%36%2e%63%6f%6d" target="_blank">电子邮件</a></li>
           </ul>
         </div>
         <div class="pannel">
