--- a/archives.html
+++ b/archives.html
@@ -4,18 +4,18 @@
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" type="text/css" href="/theme/css/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/theme/css/pygment.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/theme/css/print.css" media="print">
+  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/pygment.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/print.css" media="print">
   <!--[if lt IE 9]>
-  <script src="/theme/js/html5.js"></script>
+  <script src="http://inpool.xyz/theme/js/html5.js"></script>
   <![endif]-->
   <title>英银坡'S BLOG</title>
 </head>
 <body>
   <header>
     <div class="inner">
-      <h1><a href="/">英银坡'S BLOG</a></h1>
+      <h1><a href="http://inpool.xyz/">英银坡'S BLOG</a></h1>
     </div>
   </header>
   <div id="content-wrapper">
@@ -32,7 +32,7 @@
 							<h5>五月 03</h5>
 						</div>
 						<div class="small-10 columns">
-							<h5><a href="/pelican-meta-data.html">Pelican(二) —— 文件元数据</a></h5>
+							<h5><a href="http://inpool.xyz/pelican-meta-data.html">Pelican(二) —— 文件元数据</a></h5>
 						</div>
 					</div>
 					<div class="row archive-entry">
@@ -40,7 +40,7 @@
 							<h5>五月 03</h5>
 						</div>
 						<div class="small-10 columns">
-							<h5><a href="/pelican-basic.html">Pelican(一) —— 基本理解</a></h5>
+							<h5><a href="http://inpool.xyz/pelican-basic.html">Pelican(一) —— 基本理解</a></h5>
 						</div>
 					</div>
 		</div>
@@ -57,15 +57,15 @@
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="/category/pelican.html">pelican <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/category/pelican.html">pelican <sup>2</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
           <h6>标签</h6>
           <ul class="side-nav">
-            <li><a href="/tag/blog.html">blog <sup>2</sup></a></li>
-            <li><a href="/tag/pelican.html">pelican <sup>2</sup></a></li>
-            <li><a href="/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/blog.html">blog <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/pelican.html">pelican <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
           </ul>
         </div>
 
