--- a/authors.html
+++ b/authors.html
@@ -4,25 +4,25 @@
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" type="text/css" href="/theme/css/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/theme/css/pygment.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/theme/css/print.css" media="print">
+  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/pygment.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/print.css" media="print">
   <!--[if lt IE 9]>
-  <script src="/theme/js/html5.js"></script>
+  <script src="http://inpool.xyz/theme/js/html5.js"></script>
   <![endif]-->
   <title>英银坡'S BLOG</title>
 </head>
 <body>
   <header>
     <div class="inner">
-      <h1><a href="/">英银坡'S BLOG</a></h1>
+      <h1><a href="http://inpool.xyz/">英银坡'S BLOG</a></h1>
     </div>
   </header>
   <div id="content-wrapper">
     <div class="inner clearfix">
       <section id="main-content">    <h1>Authors on 英银坡'S BLOG</h1>
 
-    <ul>        <li><a href="/author/inpool.html">Inpool</a> (2)</li>
+    <ul>        <li><a href="http://inpool.xyz/author/inpool.html">Inpool</a> (2)</li>
     </ul>
 </section>
       <aside id="sidebar">
@@ -36,15 +36,15 @@
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="/category/pelican.html">pelican <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/category/pelican.html">pelican <sup>2</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
           <h6>标签</h6>
           <ul class="side-nav">
-            <li><a href="/tag/blog.html">blog <sup>2</sup></a></li>
-            <li><a href="/tag/pelican.html">pelican <sup>2</sup></a></li>
-            <li><a href="/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/blog.html">blog <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/pelican.html">pelican <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
           </ul>
         </div>
 
