--- a/pelican-basic.html
+++ b/pelican-basic.html
@@ -4,18 +4,18 @@
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" type="text/css" href="/theme/css/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/theme/css/pygment.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/theme/css/print.css" media="print">
+  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/pygment.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/print.css" media="print">
   <!--[if lt IE 9]>
-  <script src="/theme/js/html5.js"></script>
+  <script src="http://inpool.xyz/theme/js/html5.js"></script>
   <![endif]-->
   <title>英银坡'S BLOG</title>
 </head>
 <body>
   <header>
     <div class="inner">
-      <h1><a href="/">英银坡'S BLOG</a></h1>
+      <h1><a href="http://inpool.xyz/">英银坡'S BLOG</a></h1>
     </div>
   </header>
   <div id="content-wrapper">
@@ -25,18 +25,18 @@
 	<div class="article_info">
 		<h6>
 			<span>
-				<a href="/author/inpool.html">Inpool</a>
+				<a href="http://inpool.xyz/author/inpool.html">Inpool</a>
 			</span>
 			<span>
 				2016-05-03 19:38
 			</span>
 				<span>
-					分类：<a href="/category/pelican.html">pelican</a>
+					分类：<a href="http://inpool.xyz/category/pelican.html">pelican</a>
 				</span>
 		</h6>
 			<h6>
-				<span>标签：						<a href="/tag/pelican.html" class="tag">pelican</a>
-						<a href="/tag/blog.html" class="tag">blog</a>
+				<span>标签：						<a href="http://inpool.xyz/tag/pelican.html" class="tag">pelican</a>
+						<a href="http://inpool.xyz/tag/blog.html" class="tag">blog</a>
 </span>
 			</h6>
 	</div>
@@ -138,21 +138,36 @@ drwxr-xr-x 1 inpool 197121    0 五月  3 15:11 output/
 	<div class="article_info">
 		<h6>
 			<span>
-				<a href="/author/inpool.html">Inpool</a>
+				<a href="http://inpool.xyz/author/inpool.html">Inpool</a>
 			</span>
 			<span>
 				2016-05-03 19:38
 			</span>
 			<span>
-					<a href="/tag/pelican.html" class="tag">pelican</a>
-					<a href="/tag/blog.html" class="tag">blog</a>
+					<a href="http://inpool.xyz/tag/pelican.html" class="tag">pelican</a>
+					<a href="http://inpool.xyz/tag/blog.html" class="tag">blog</a>
 			</span>
 			<span>
-					分类：<a href="/category/pelican.html">pelican</a>
+					分类：<a href="http://inpool.xyz/category/pelican.html">pelican</a>
 			</span>
 		</h6>
 	</div>
 </article>
+<!-- duoshuo commet start -->
+<div class="ds-thread" data-thread-key="/pelican/pelican-basic" data-title="Pelican(一) —— 基本理解" data-url="http://inpool.xyz/pelican-basic.html"></div>
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"inpool"};
+(function() {
+	var ds = document.createElement('script'),
+		protocol = document.location.protocol == 'https:' ? 'https:' : 'http:';
+	ds.type = 'text/javascript';ds.async = true;
+	ds.src = protocol + '//static.duoshuo.com/embed.js';
+	ds.charset = 'UTF-8';
+	(document.getElementsByTagName('head')[0]
+	 || document.getElementsByTagName('body')[0]).appendChild(ds);
+})();
+</script>
+<!-- duoshuo commet end -->
 </section>
       <aside id="sidebar">
         <div class="pannel">
@@ -165,15 +180,15 @@ drwxr-xr-x 1 inpool 197121    0 五月  3 15:11 output/
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="/category/pelican.html">pelican <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/category/pelican.html">pelican <sup>2</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
           <h6>标签</h6>
           <ul class="side-nav">
-            <li><a href="/tag/blog.html">blog <sup>2</sup></a></li>
-            <li><a href="/tag/pelican.html">pelican <sup>2</sup></a></li>
-            <li><a href="/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/blog.html">blog <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/pelican.html">pelican <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
           </ul>
         </div>
 
