--- a/archives.html
+++ b/archives.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/stylesheet.css" media="screen">
   <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/pygment.css" media="screen">
   <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/print.css" media="print">
+  	<link href="http://inpool.xyz/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="英银坡'S BLOG Atom Feed" />
   <!--[if lt IE 9]>
   <script src="http://inpool.xyz/theme/js/html5.js"></script>
   <![endif]-->
