--- a/pelican-basic.html
+++ b/pelican-basic.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/stylesheet.css" media="screen">
   <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/pygment.css" media="screen">
   <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/print.css" media="print">
+  	<link href="http://inpool.xyz/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="英银坡'S BLOG Atom Feed" />
+		<link href="http://inpool.xyz/feeds/pelican.atom.xml" type="application/atom+xml" rel="alternate" title="英银坡'S BLOG Categories Atom Feed" />
   <!--[if lt IE 9]>
   <script src="http://inpool.xyz/theme/js/html5.js"></script>
   <![endif]-->
-  <title>英银坡'S BLOG</title>
+  <title>Pelican(一) —— 基本理解 - 英银坡'S BLOG </title>
 </head>
 <body>
   <header>
