--- a/tags.html
+++ b/tags.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/stylesheet.css" media="screen">
   <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/pygment.css" media="screen">
   <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/print.css" media="print">
+  	<link href="http://inpool.xyz/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="英银坡'S BLOG Atom Feed" />
   <!--[if lt IE 9]>
   <script src="http://inpool.xyz/theme/js/html5.js"></script>
   <![endif]-->
@@ -21,9 +22,9 @@
   <div id="content-wrapper">
     <div class="inner clearfix">
       <section id="main-content">	<ul>
-		<li><a href="http://inpool.xyz/tag/pelican.html">pelican</a></li>
-		<li><a href="http://inpool.xyz/tag/blog.html">blog</a></li>
 		<li><a href="http://inpool.xyz/tag/restructuredtext.html">reStructuredText</a></li>
+		<li><a href="http://inpool.xyz/tag/blog.html">blog</a></li>
+		<li><a href="http://inpool.xyz/tag/pelican.html">pelican</a></li>
 	</ul>
 </section>
       <aside id="sidebar">
