添加文章：pip配置

--- a/tools/pelican-meta-data.html
+++ b/tools/pelican-meta-data.html
@@ -77,12 +77,8 @@
 </div>
 <div class="section" id="date">
 <h2>发布时间(date)</h2>
-<p>该文章的发布时间，若没有提供，或明确提供为 <tt class="docutils literal">'fs'</tt> ，Pelican会试图从文件的修改时间提取。
+<p>该文章的发布时间，若没有提供，Pelican会根据配置文件的 <tt class="docutils literal">DEFAULT_DATE</tt> 设定获取时间，当 <tt class="docutils literal">DEFAULT_DATE = 'fs'</tt> 时，从文件的修改时间提取。
 由于文件的修改时间可能会由于各种原因发生变化，最好手动指定。</p>
-<div class="note">
-<p class="first admonition-title">Note</p>
-<p class="last">我在windows 7下使用pelican 3.6.3，若不指定date，在转换为html文件时报错。</p>
-</div>
 </div>
 <div class="section" id="modified">
 <h2>最后修改时间(modified)</h2>
@@ -187,7 +183,7 @@ var duoshuoQuery = {short_name:"inpool"};
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="http://inpool.xyz/category/tools.html">工具 <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/category/tools.html">工具 <sup>3</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
