--- a/archives.html
+++ b/archives.html
@@ -30,6 +30,14 @@
 				</div>
 					<div class="row archive-entry">
 						<div class="small-2 columns text-right">
+							<h5>五月 11</h5>
+						</div>
+						<div class="small-10 columns">
+							<h5><a href="http://inpool.xyz/tools/configure-pip.html">python包管理系统——pip的设置</a></h5>
+						</div>
+					</div>
+					<div class="row archive-entry">
+						<div class="small-2 columns text-right">
 							<h5>五月 03</h5>
 						</div>
 						<div class="small-10 columns">
@@ -58,7 +66,7 @@
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="http://inpool.xyz/category/tools.html">工具 <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/category/tools.html">工具 <sup>3</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
