--- a/tools/pelican-meta-data.html
+++ b/tools/pelican-meta-data.html
@@ -17,12 +17,13 @@
 <body>
   <header>
     <div class="inner">
-      <h1><a href="http://inpool.xyz/">英银坡'S BLOG</a></h1>
+      <h1><a href="http://inpool.xyz/index.html">英银坡'S BLOG</a></h1>
     </div>
   </header>
   <div id="content-wrapper">
     <div class="inner clearfix">
-      <section id="main-content"><article>
+      <section id="main-content">
+<article>
 	<h1>Pelican(二) —— 文件元数据</h1>
 	<div class="article_info">
 		<h6>
@@ -171,7 +172,7 @@ var duoshuoQuery = {short_name:"inpool"};
 })();
 </script>
 <!-- duoshuo commet end -->
-</section>
+      </section>
       <aside id="sidebar">
         <div class="pannel">
           <h6>关于我</h6>
@@ -190,7 +191,10 @@ var duoshuoQuery = {short_name:"inpool"};
           <h6>标签</h6>
           <ul class="side-nav">
             <li><a href="http://inpool.xyz/tag/blog.html">blog <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/package-management.html">package management <sup>1</sup></a></li>
             <li><a href="http://inpool.xyz/tag/pelican.html">pelican <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/pip.html">pip <sup>1</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/python.html">python <sup>1</sup></a></li>
             <li><a href="http://inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
           </ul>
         </div>
