--- a/categories.html
+++ b/categories.html
@@ -16,15 +16,16 @@
 <body>
   <header>
     <div class="inner">
-      <h1><a href="http://inpool.xyz/">英银坡'S BLOG</a></h1>
+      <h1><a href="http://inpool.xyz/index.html">英银坡'S BLOG</a></h1>
     </div>
   </header>
   <div id="content-wrapper">
     <div class="inner clearfix">
-      <section id="main-content">	<ul>
+      <section id="main-content">
+	<ul>
 		<li><a href="http://inpool.xyz/category/tools.html">工具</a></li>
 	</ul>
-</section>
+      </section>
       <aside id="sidebar">
         <div class="pannel">
           <h6>关于我</h6>
@@ -43,7 +44,10 @@
           <h6>标签</h6>
           <ul class="side-nav">
             <li><a href="http://inpool.xyz/tag/blog.html">blog <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/package-management.html">package management <sup>1</sup></a></li>
             <li><a href="http://inpool.xyz/tag/pelican.html">pelican <sup>2</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/pip.html">pip <sup>1</sup></a></li>
+            <li><a href="http://inpool.xyz/tag/python.html">python <sup>1</sup></a></li>
             <li><a href="http://inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
           </ul>
         </div>
