修改站点网址

--- a/archives.html
+++ b/archives.html
@@ -4,19 +4,19 @@
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/pygment.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/print.css" media="print">
-  	<link href="http://inpool.xyz/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="英银坡'S BLOG Atom Feed" />
+  <link rel="stylesheet" type="text/css" href="http://www.inpool.xyz/theme/css/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="http://www.inpool.xyz/theme/css/pygment.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="http://www.inpool.xyz/theme/css/print.css" media="print">
+  	<link href="http://www.inpool.xyz/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="英银坡'S BLOG Atom Feed" />
   <!--[if lt IE 9]>
-  <script src="http://inpool.xyz/theme/js/html5.js"></script>
+  <script src="http://www.inpool.xyz/theme/js/html5.js"></script>
   <![endif]-->
   <title>英银坡'S BLOG</title>
 </head>
 <body>
   <header>
     <div class="inner">
-      <h1><a href="http://inpool.xyz/index.html">英银坡'S BLOG</a></h1>
+      <h1><a href="http://www.inpool.xyz/index.html">英银坡'S BLOG</a></h1>
     </div>
   </header>
   <div id="content-wrapper">
@@ -34,7 +34,7 @@
 							<h5>五月 11</h5>
 						</div>
 						<div class="small-10 columns">
-							<h5><a href="http://inpool.xyz/tools/configure-pip.html">python包管理系统——pip的设置</a></h5>
+							<h5><a href="http://www.inpool.xyz/tools/configure-pip.html">python包管理系统——pip的设置</a></h5>
 						</div>
 					</div>
 					<div class="row archive-entry">
@@ -42,7 +42,7 @@
 							<h5>五月 03</h5>
 						</div>
 						<div class="small-10 columns">
-							<h5><a href="http://inpool.xyz/tools/pelican-meta-data.html">Pelican(二) —— 文件元数据</a></h5>
+							<h5><a href="http://www.inpool.xyz/tools/pelican-meta-data.html">Pelican(二) —— 文件元数据</a></h5>
 						</div>
 					</div>
 					<div class="row archive-entry">
@@ -50,7 +50,7 @@
 							<h5>五月 03</h5>
 						</div>
 						<div class="small-10 columns">
-							<h5><a href="http://inpool.xyz/tools/pelican-basic.html">Pelican(一) —— 基本理解</a></h5>
+							<h5><a href="http://www.inpool.xyz/tools/pelican-basic.html">Pelican(一) —— 基本理解</a></h5>
 						</div>
 					</div>
 		</div>
@@ -67,18 +67,18 @@
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="http://inpool.xyz/category/tools.html">工具 <sup>3</sup></a></li>
+            <li><a href="http://www.inpool.xyz/category/tools.html">工具 <sup>3</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
           <h6>标签</h6>
           <ul class="side-nav">
-            <li><a href="http://inpool.xyz/tag/blog.html">blog <sup>2</sup></a></li>
-            <li><a href="http://inpool.xyz/tag/package-management.html">package management <sup>1</sup></a></li>
-            <li><a href="http://inpool.xyz/tag/pelican.html">pelican <sup>2</sup></a></li>
-            <li><a href="http://inpool.xyz/tag/pip.html">pip <sup>1</sup></a></li>
-            <li><a href="http://inpool.xyz/tag/python.html">python <sup>1</sup></a></li>
-            <li><a href="http://inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/blog.html">blog <sup>2</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/package-management.html">package management <sup>1</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/pelican.html">pelican <sup>2</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/pip.html">pip <sup>1</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/python.html">python <sup>1</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
           </ul>
         </div>
 
