--- a/tools/configure-pip.html
+++ b/tools/configure-pip.html
@@ -4,20 +4,20 @@
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/pygment.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="http://inpool.xyz/theme/css/print.css" media="print">
-  	<link href="http://inpool.xyz/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="英银坡'S BLOG Atom Feed" />
-		<link href="http://inpool.xyz/feeds/tools.atom.xml" type="application/atom+xml" rel="alternate" title="英银坡'S BLOG Categories Atom Feed" />
+  <link rel="stylesheet" type="text/css" href="http://www.inpool.xyz/theme/css/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="http://www.inpool.xyz/theme/css/pygment.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="http://www.inpool.xyz/theme/css/print.css" media="print">
+  	<link href="http://www.inpool.xyz/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="英银坡'S BLOG Atom Feed" />
+		<link href="http://www.inpool.xyz/feeds/tools.atom.xml" type="application/atom+xml" rel="alternate" title="英银坡'S BLOG Categories Atom Feed" />
   <!--[if lt IE 9]>
-  <script src="http://inpool.xyz/theme/js/html5.js"></script>
+  <script src="http://www.inpool.xyz/theme/js/html5.js"></script>
   <![endif]-->
   <title>python包管理系统——pip的设置 - 英银坡'S BLOG </title>
 </head>
 <body>
   <header>
     <div class="inner">
-      <h1><a href="http://inpool.xyz/index.html">英银坡'S BLOG</a></h1>
+      <h1><a href="http://www.inpool.xyz/index.html">英银坡'S BLOG</a></h1>
     </div>
   </header>
   <div id="content-wrapper">
@@ -34,13 +34,13 @@
 				2016-05-11 15:00
 			</span>
 				<span>
-					分类：<a href="http://inpool.xyz/category/tools.html">工具</a>
+					分类：<a href="http://www.inpool.xyz/category/tools.html">工具</a>
 				</span>
 		</h6>
 			<h6>
-				<span>标签：						<a href="http://inpool.xyz/tag/pip.html" class="tag">pip</a>
-						<a href="http://inpool.xyz/tag/python.html" class="tag">python</a>
-						<a href="http://inpool.xyz/tag/package-management.html" class="tag">package management</a>
+				<span>标签：						<a href="http://www.inpool.xyz/tag/pip.html" class="tag">pip</a>
+						<a href="http://www.inpool.xyz/tag/python.html" class="tag">python</a>
+						<a href="http://www.inpool.xyz/tag/package-management.html" class="tag">package management</a>
 </span>
 			</h6>
 	</div>
@@ -187,18 +187,18 @@ $ pip help [sub-command]
 				2016-05-11 15:00
 			</span>
 			<span>
-					<a href="http://inpool.xyz/tag/pip.html" class="tag">pip</a>
-					<a href="http://inpool.xyz/tag/python.html" class="tag">python</a>
-					<a href="http://inpool.xyz/tag/package-management.html" class="tag">package management</a>
+					<a href="http://www.inpool.xyz/tag/pip.html" class="tag">pip</a>
+					<a href="http://www.inpool.xyz/tag/python.html" class="tag">python</a>
+					<a href="http://www.inpool.xyz/tag/package-management.html" class="tag">package management</a>
 			</span>
 			<span>
-					分类：<a href="http://inpool.xyz/category/tools.html">工具</a>
+					分类：<a href="http://www.inpool.xyz/category/tools.html">工具</a>
 			</span>
 		</h6>
 	</div>
 </article>
 <!-- duoshuo commet start -->
-<div class="ds-thread" data-thread-key="/tools/configure-pip" data-title="python包管理系统——pip的设置" data-url="http://inpool.xyz/tools/configure-pip.html"></div>
+<div class="ds-thread" data-thread-key="/tools/configure-pip" data-title="python包管理系统——pip的设置" data-url="http://www.inpool.xyz/tools/configure-pip.html"></div>
 <script type="text/javascript">
 var duoshuoQuery = {short_name:"inpool"};
 (function() {
@@ -224,18 +224,18 @@ var duoshuoQuery = {short_name:"inpool"};
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="http://inpool.xyz/category/tools.html">工具 <sup>3</sup></a></li>
+            <li><a href="http://www.inpool.xyz/category/tools.html">工具 <sup>3</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
           <h6>标签</h6>
           <ul class="side-nav">
-            <li><a href="http://inpool.xyz/tag/blog.html">blog <sup>2</sup></a></li>
-            <li><a href="http://inpool.xyz/tag/package-management.html">package management <sup>1</sup></a></li>
-            <li><a href="http://inpool.xyz/tag/pelican.html">pelican <sup>2</sup></a></li>
-            <li><a href="http://inpool.xyz/tag/pip.html">pip <sup>1</sup></a></li>
-            <li><a href="http://inpool.xyz/tag/python.html">python <sup>1</sup></a></li>
-            <li><a href="http://inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/blog.html">blog <sup>2</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/package-management.html">package management <sup>1</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/pelican.html">pelican <sup>2</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/pip.html">pip <sup>1</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/python.html">python <sup>1</sup></a></li>
+            <li><a href="http://www.inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
           </ul>
         </div>
 
