--- a/archives.html
+++ b/archives.html
@@ -31,6 +31,14 @@
 				</div>
 					<div class="row archive-entry">
 						<div class="small-2 columns text-right">
+							<h5>五月 16</h5>
+						</div>
+						<div class="small-10 columns">
+							<h5><a href="//www.inpool.xyz/tools/pelican-usage.html">Pelican(三) —— 基本使用</a></h5>
+						</div>
+					</div>
+					<div class="row archive-entry">
+						<div class="small-2 columns text-right">
 							<h5>五月 11</h5>
 						</div>
 						<div class="small-10 columns">
@@ -67,7 +75,7 @@
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="//www.inpool.xyz/category/tools.html">工具 <sup>3</sup></a></li>
+            <li><a href="//www.inpool.xyz/category/tools.html">工具 <sup>4</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
@@ -75,10 +83,10 @@
           <ul class="side-nav">
             <li><a href="//www.inpool.xyz/tag/blog.html">blog <sup>2</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/package-management.html">package management <sup>1</sup></a></li>
-            <li><a href="//www.inpool.xyz/tag/pelican.html">pelican <sup>2</sup></a></li>
+            <li><a href="//www.inpool.xyz/tag/pelican.html">pelican <sup>3</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/pip.html">pip <sup>1</sup></a></li>
-            <li><a href="//www.inpool.xyz/tag/python.html">python <sup>1</sup></a></li>
-            <li><a href="//www.inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>1</sup></a></li>
+            <li><a href="//www.inpool.xyz/tag/python.html">python <sup>2</sup></a></li>
+            <li><a href="//www.inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>2</sup></a></li>
           </ul>
         </div>
 
