--- a/archives.html
+++ b/archives.html
@@ -61,6 +61,19 @@
 							<h5><a href="//www.inpool.xyz/tools/pelican-basic.html">Pelican(一) —— 基本理解</a></h5>
 						</div>
 					</div>
+				<div class="row archive-year">
+					<div class="small-2 columns text-right">
+						<h3>2015</h3>
+					</div>
+				</div>
+					<div class="row archive-entry">
+						<div class="small-2 columns text-right">
+							<h5>五月 20</h5>
+						</div>
+						<div class="small-10 columns">
+							<h5><a href="//www.inpool.xyz/tools/sublime-text-plugin.html">如何管理Sublime Text的插件</a></h5>
+						</div>
+					</div>
 		</div>
 	</div>
       </section>
@@ -75,7 +88,7 @@
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="//www.inpool.xyz/category/tools.html">工具 <sup>4</sup></a></li>
+            <li><a href="//www.inpool.xyz/category/tools.html">工具 <sup>5</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
@@ -85,6 +98,7 @@
             <li><a href="//www.inpool.xyz/tag/package-management.html">package management <sup>1</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/pelican.html">pelican <sup>3</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/pip.html">pip <sup>1</sup></a></li>
+            <li><a href="//www.inpool.xyz/tag/plugin.html">plugin <sup>1</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/python.html">python <sup>2</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>2</sup></a></li>
           </ul>
