--- a/tags.html
+++ b/tags.html
@@ -23,12 +23,13 @@
     <div class="inner clearfix">
       <section id="main-content">
 	<ul>
-		<li><a href="//www.inpool.xyz/tag/blog.html">blog</a></li>
-		<li><a href="//www.inpool.xyz/tag/package-management.html">package management</a></li>
-		<li><a href="//www.inpool.xyz/tag/restructuredtext.html">reStructuredText</a></li>
 		<li><a href="//www.inpool.xyz/tag/pelican.html">pelican</a></li>
+		<li><a href="//www.inpool.xyz/tag/restructuredtext.html">reStructuredText</a></li>
 		<li><a href="//www.inpool.xyz/tag/python.html">python</a></li>
+		<li><a href="//www.inpool.xyz/tag/plugin.html">plugin</a></li>
+		<li><a href="//www.inpool.xyz/tag/blog.html">blog</a></li>
 		<li><a href="//www.inpool.xyz/tag/pip.html">pip</a></li>
+		<li><a href="//www.inpool.xyz/tag/package-management.html">package management</a></li>
 	</ul>
       </section>
       <aside id="sidebar">
@@ -42,7 +43,7 @@
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="//www.inpool.xyz/category/tools.html">工具 <sup>4</sup></a></li>
+            <li><a href="//www.inpool.xyz/category/tools.html">工具 <sup>5</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
@@ -52,6 +53,7 @@
             <li><a href="//www.inpool.xyz/tag/package-management.html">package management <sup>1</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/pelican.html">pelican <sup>3</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/pip.html">pip <sup>1</sup></a></li>
+            <li><a href="//www.inpool.xyz/tag/plugin.html">plugin <sup>1</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/python.html">python <sup>2</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>2</sup></a></li>
           </ul>
