--- a/tools/pelican-meta-data.html
+++ b/tools/pelican-meta-data.html
@@ -184,7 +184,7 @@ var duoshuoQuery = {short_name:"inpool"};
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="//www.inpool.xyz/category/tools.html">工具 <sup>4</sup></a></li>
+            <li><a href="//www.inpool.xyz/category/tools.html">工具 <sup>5</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
@@ -194,6 +194,7 @@ var duoshuoQuery = {short_name:"inpool"};
             <li><a href="//www.inpool.xyz/tag/package-management.html">package management <sup>1</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/pelican.html">pelican <sup>3</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/pip.html">pip <sup>1</sup></a></li>
+            <li><a href="//www.inpool.xyz/tag/plugin.html">plugin <sup>1</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/python.html">python <sup>2</sup></a></li>
             <li><a href="//www.inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>2</sup></a></li>
           </ul>
